Análisis comparativo: Estilos modificados, colores de columnas cambiados y estilo de pantalla de logs modificado Corregido el error que escribe nan en las celdas Ubicación se dividio en siigo y manual para poder filtrar diferencias y corregirlas Se restituyeron las columnas inventario manual, siigo y diferencia Se elimino la columna cantidad

--- a/TODO
+++ b/TODO
@@ -1,8 +1,9 @@
-Análisis comparativo:
-las columnas STIHL	SUZUKI	YAMAHA sobran
-el color de la descripción se debe eliminar
-en la columna diferencia cuando los valores sean positivos en verde, cuando sean negativos en rojo
-el funcionamiento de la marca esta mal, debería poner como marca el origen cuando no sea siigo
-el código del producto lo deberían tener todos los productos
+
+
+
+
+
 
 Crear el excel para subir el inventario manual de forma automatica
+
+Crear README
